--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <div class="imgBox">
                 <img src="profile.jpeg" alt="profile photo">
              </div>
-             <h2>Maycon Bernardes <br> <span><strong>Demande de stage:</strong><br> Développeur de Web & Web mobile du 07/02/2024 au 15/03/2024 </span></h2>
+             <h2>Maycon Bernardes <br> <span><strong>Demande de stage:</strong><br> Développeur Web & Web mobile du 07/02/2024 au 15/03/2024 </span></h2>
         </div>
 
         <div class="contactInfo"> 
