--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <div class="imgBox">
                 <img src="profile.jpeg" alt="profile photo">
              </div>
-             <h2>Maycon Bernardes <br> <span><strong>Demande de stage:</strong><br> Développeur de Web & Web mobile du 07/02/2024 au 15/03/2024 </span></h2>
+             <h2>Maycon Bernardes <br> <br><span><strong>Demande de stage:</strong><br> Développeur Web & Web mobile du 07/02/2024 au 15/03/2024 </span></h2>
         </div>
 
         <div class="contactInfo"> 
@@ -123,14 +123,14 @@
 
                 <div class="box">
                     <div class="year_company">
-                        <h5>Août 2018 à 2022</h5>
+                        <h5>2018 à 2022</h5>
                         <h5>Hôtel Le Ryad Marseille (CDI) </h5>
                     </div>
 
                     <div class="text">
                         <h4>Gouvernance et restauration </h4>
                         <br>
-                        <p>Création d'un environnement propre, sécurisé et accueillant pour les clients, tout en veillant à offrir des services de restauration de haute qualité.</p>
+                        <p>Création d'un environnement propre, sécurisé et accueillant pour les clients, tout en veillant à offrir des services d'accueil de haute qualité.</p>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                     <div class="text">
                         <h4>Interpréte portugais/français - espagnol/français</h4>
                         <br>
-                        <p>Responsable de réaliser des traductions simultanées pour les étrangers lors du processus d'intégration en France. </p>
+                        <p>Réalisation des traductions simultanées pour fles étrangers lors du processus d'intégration en France. </p>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
             <div class="about">
                 <div class="box">
                      <div class="year_company">
-                         <h5>Mars 2015 à Septembre 2017 </h5>
+                         <h5>2015 à 2017 </h5>
                          <h5>Savoie (Serrières-en-Chautagne)  </h5>
                     </div>
 
@@ -186,7 +186,7 @@
             <div class="about">
                 <div class="box">
                      <div class="year_company">
-                         <h5>Jan 2013 <br> à Déc 2014</h5>
+                         <h5>2013 à 2014</h5>
                          <h5>Araras, Marseille</h5>
                     </div>
 
@@ -202,7 +202,7 @@
             <div class="about">
                 <div class="box">
                      <div class="year_company">
-                         <h5>Avril 2009 à Avril 2013 </h5>
+                         <h5>2009 à 2013 </h5>
                          <h5>Grupo Protége Nestlé <br>Araras Brésil </h5>
                     </div>
 
