--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-             <div class="profileText">
-             <div class="imgBox">
-                <img src="profile.jpeg" alt="profile photo">
+<div class="container">
+<div class="left">
+        <div class="profileText">
+        <div class="imgBox">
+        <img src="profile.jpeg" alt="profile photo">
              </div>
-             <h2>Maycon Bernardes <br> <span><strong>Demande de stage:</strong><br> Développeur de Web <br> & Web mobile <br>du 07/02/2024 au 15/03/2024 </span></h2>
+             <h2>Maycon Bernardes <br> <span><strong>Demande de stage :</strong><br> Développeur de Web <br> & Web mobile <br>du 07/02/2024 au 15/03/2024 </span></h2>
         </div>
 
         <div class="contactInfo"> 
@@ -85,10 +85,10 @@
 
 
         <div class="contactInfo language"> 
-            <h3 class="title">Languages</h3>
+            <h3 class="title">Langues</h3>
             <ul>
                 <li>
-                    <span class="text">Portugais - maternelle</span>
+                    <span class="text">Portugais - Maternelle</span>
                 </li>
                 <li>
                     <span class="text">Français - Courant</span>
@@ -113,7 +113,7 @@
             <div class="about">
                 <h2 class="title2">Profile
                 </h2>
-                <p>Titulaire d'un diplôme bac + 3 en Hôtellerie et tourisme. Actuellement en formation <strong>Développeur web et web mobile</strong> chez Simplon à Marseille </p>
+                <p>Titulaire d'un diplôme bac + 3 en Hôtellerie et tourisme. Actuellement en formation <strong>Développeur web et web mobile</strong> chez Simplon à Marseille. </p>
             </div>
 
             <div class="about">
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="text">
-                        <h4>Interpréte portugais/français - espagnol/français</h4>
+                        <h4>Interprète portugais/français - espagnol/français</h4>
                         <br>
                         <p>Réalisation des traductions simultanées pour fles étrangers lors du processus d'intégration en France. </p>
                     </div>
@@ -177,7 +177,7 @@
                     <div class="text">
                         <h4>Garçon au pair</h4>
                         <br>
-                        <p>J'ai vécu une expérience transformative en tant qu'au pair. J'ai pris soin des enfants et partagé des moments inoubliables avec ma famille d'accueil.
+                        <p>J'ai vécu une expérience enrichissante en tant qu'au pair. J'ai pris soin des enfants et partagé des moments inoubliables avec ma famille d'accueil.
                         </p>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                     <div class="text">
                         <h4>Freelance en informatique</h4>
                         <br>
-                        <p>Technicien informatique (dépannages, mise en service des matériels informatiques PC,péripheriques,logiciels)
+                        <p>Technicien informatique (dépannages, mise en service des matériels informatiques PC, péripheriques, logiciels)
                         </p>
                     </div>
                 </div>
@@ -222,16 +222,37 @@
             <div class="about interests">
                 <h2 class="title2">Loisirs</h2>
                 <ul>
-                    <li><i class="fa fa-chess" aria-hidden="true" style="color:#081921"></i>Echecs</li>
-                    <li><i class="fa-solid fa-utensils"></i>Cuisiner</li>
-                    <li><i class="fa fa-gamepad" aria-hidden="true" style="color:#081921"></i>
-                        Gaming</li>
-                    <li><i class="fa fa-podcast" aria-hidden="true" style="color:#081921"></i>
-                         Podcast</li>
-                    <li> <i class="fa fa-futbol-o" aria-hidden="true" style="color:#081921"></i>
-                        <li><i class="fa-regular fa-futbol" style="color:#081921"></i>Football</li>
-                    <li><i class="fa fa-bicycle" aria-hidden="true" style="color:#081921"></i>
-                        Bike</li>
+
+
+
+                   <li> <i class="fa fa-chess" aria-hidden="true" style="color:#081921"></i>
+                    <span class="icon-text">Echecs</span></li>
+
+
+
+
+                    <li>
+                        <i class="fa-solid fa-utensils" aria-hidden="true" style="color:#081921"></i>
+                        <span class="icon-text">Cuisiner</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-gamepad" aria-hidden="true" style="color:#081921"></i>
+                        <span class="icon-text">Gaming</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-podcast" aria-hidden="true" style="color:#081921"></i>
+                        <span class="icon-text">Podcast</span>
+                    </li>
+                    
+                    <li>
+                        <i class="fa-regular fa-futbol" style="color:#081921"></i>
+                        <span class="icon-text">Football</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-bicycle" aria-hidden="true" style="color:#081921"></i>
+                        <span class="icon-text">Echecs</span>
+                    </li>
+                     
                 </ul>
           </div>
 
