--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
             <ul>
                 <li>
                     <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                    <span class="text">06 95 60 58 76</span>
+                    <span class="text"><a href="tel:+33695605876">06 95 60 58 76</a></span>
                 </li>
                 <li>
                     <span class="icon"><i class="fa fa-envelope-open" aria-hidden="true"></i></span>
-                    <span class="text">mayconwin@hotmail.com</span>
+                    <span class="text"><a href="mailto:mayconwin@hotmail.com">mayconwin@hotmail.com</a></span>
+                    
                 </li>
+
                 <li>
-                    <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                    <span class="text">www.mywebsite.com</span>
-                </li>
+                    <span class="icon"><i class="fab fa-whatsapp" aria-hidden="true"></i></span>
+                    <span class="text"><a href="https://api.whatsapp.com/send?phone=33695605876" target="_blank">Whatsapp</a></span>
+                    
+                    </li>
+
+
                 <li>
-                    <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                    <span class="text"><a href="https://www.linkedin.com/in/maycon-bernardes-7502b8113/" target="_blank">Maycon Bernardes</a></span>
+                    <span class="icon"><i class="fab fa-linkedin" aria-hidden="true"></i></span>
+                    <span class="text"><a href="https://www.linkedin.com/in/maycon-bernardes-7502b8113/" target="_blank">Linkedin</a></span>
                 </li>
                 <li>
                     <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
