--- a/index.html
+++ b/index.html
@@ -230,17 +230,11 @@
                    <li> <i class="fa fa-chess" aria-hidden="true" style="color:#081921"></i>
                     <span class="icon-text">Echecs</span></li>
 
-
-
-
                     <li>
                         <i class="fa-solid fa-utensils" aria-hidden="true" style="color:#081921"></i>
                         <span class="icon-text">Cuisiner</span>
                     </li>
-                    <li>
-                        <i class="fa fa-gamepad" aria-hidden="true" style="color:#081921"></i>
-                        <span class="icon-text">Gaming</span>
-                    </li>
+                    
                     <li>
                         <i class="fa fa-podcast" aria-hidden="true" style="color:#081921"></i>
                         <span class="icon-text">Podcast</span>
@@ -254,7 +248,12 @@
                         <i class="fa fa-bicycle" aria-hidden="true" style="color:#081921"></i>
                         <span class="icon-text">Echecs</span>
                     </li>
-                     
+
+                    <li>
+                        <i class="fa fa-gamepad" aria-hidden="true" style="color:#081921"></i>
+                        <span class="icon-text">Game</span>
+ 
+                    </li>
                 </ul>
           </div>
 
