--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </li>
                     <li>
                         <i class="fa fa-bicycle" aria-hidden="true" style="color:#081921"></i>
-                        <span class="icon-text">Echecs</span>
+                        <span class="icon-text">Bike</span>
                     </li>
 
                     <li>
